--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "InternshipTK-main",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.0",
